src/main/java/com/example/linkingrest/error/exception/EmailLoginFailedException.java
package com.example.linkingrest.error.exception;


public class EmailLoginFailedException extends RuntimeException{

    public EmailLoginFailedException(){
        super();
    }

}
